# ogx-distribution

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile  Containerfile.in  Dockerfile.konflux  Dockerfile.konflux.in  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  mergify.yml
.tekton/: README.md  odh-llama-stack-core-v3-3-push.yaml  odh-llama-stack-core-v3-4-push.yaml  odh-llama-stack-core-v3-5-ea-1-pull-request.yaml  odh-llama-stack-core-v3-5-ea-1-push.yaml  odh-ogx-core-pull-request.yaml  odh-ogx-core-push.yaml  odh-ogx-core-v3-5-ea-1-push.yaml  odh-ogx-core-v3-5-ea-2-pull-request.yaml  odh-ogx-core-v3-5-ea-2-push.yaml  odh-ogx-core-v3-5-pull-request.yaml  odh-ogx-core-v3-5-push.yaml
distribution/: Containerfile  Containerfile.in  README.md  artifacts.lock.yaml  build.py  build.yaml  config.yaml  constraints.txt  copy-artifacts.sh  entrypoint.sh  fetch_artifacts.py  install-common-konflux.sh  install-common.sh  install-deps.sh  requirements-lock-konflux.txt  requirements-lock.txt  (+2 more)
tests/functional/: README.md  pyproject.toml
tests/functional/bruno/: README.md  package.json
tests/functional/bruno/ogx-api/: bruno.json  collection.bru
tests/functional/bruno/ogx-api/01-admin/: List Models.bru  List Providers.bru
tests/functional/bruno/ogx-api/environments/: ogx.bru
tests/functional/notebooks/: README.md  test_basic_inference.ipynb
tests/functional/scripts/: bruno_summary.py  helpers.py  lint_bruno.py  run-tests-with-providers.sh  setup-server.sh  sync-client-version.sh
tests/functional/tests/: test_notebooks.py
(+39 files in other folders)
