[project]
name = "ogx-functional-tests"
version = "0.1.0"
description = "Functional tests for OGX (Bruno + notebooks)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ogx-client~=1.0.0",
    "openai>=2.24.0",
    "pytest>=9.0.2",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.0",
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
extend-exclude = ["bruno/"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]
